<resources>
    <string name="app_name">SQLite Project</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="mark">Mark</string>
    <string name="button_text">Add to Database</string>
    <string name="get_all_data_btn">Get all data</string>
    <string name="id">ID</string>
    <string name="update_database">Update Database</string>
    <string name="delete_data">Delete Data</string>
    <string name="add_data">Add Data</string>

    <string name="full_name">%s %s</string>
    <string name="mark_text">%s</string>
</resources>
